# issue-agent

./: .gitignore  Dockerfile  Makefile  fastagent.jsonl  main.py  pyproject.toml  server.py
agents/: classifier_agent.py  reply_agent.py  retriever_agent.py  review_agent.py
config/: config_loader.py
config/prompts/: issue_agent.txt  mcp.yaml
core/: issue_state.py  llm.py  mcp_manager.py
data/: issues.json
data/chroma/: chroma.sqlite3
data/history-issues/: issue_index.json  issue_index.txt
graphs/: issue_graph.py
nodes/: fetch_issue_node.py
scripts/: build.py  build_vectorstore.py  faq.py  fetch_issue.py
tools/: issue_retriever.py  send_feishu_tool.py
